Created another For Loop to print out the client's full name and country where they are from.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
 </head>
 <link rel="stylesheet" type="text/css" href="main.css">
 <body>
-<ul id="anchor"></ul>
+<h2>Clients Details</h2>
+<ul id="details"></ul>
+<h2>Marital Status</h2>
+<ul id="married"></ul>
+<h2>This Weeks Birthdays</h2>
+<h4 id="birthday"></h4>
+
 <script src="main.js"></script>
 </body>
 </html>
